--- a/package.json
+++ b/package.json
@@ -1,18 +1,6 @@
 {
-  "name": "logo-generator-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "openai": "^5.10.2"
+    "openai": "^5.1.0"
   }
 }
